# metro_simulator

./: .bazelrc  .gitattributes  .gitignore  BUILD.bazel  Makefile  WORKSPACE
.github/workflows/: ci.yaml
cargo/: Cargo.toml  crates.bzl
config/: BUILD.bazel  debug.toml
configs/: BUILD.bazel  debug.toml
engine/: BUILD.bazel  behavior.rs  config.rs  consistency.rs  engine.rs  field_blur.rs  field_update.rs  fields.rs  lib.rs  state.rs  time_state.rs  trigger.rs
engine/agent/: BUILD.bazel  agent.rs  agent_data.rs  agent_route_state.rs  common.rs  lib.rs
engine/fields/: BUILD.bazel  lib.rs
engine/highway/: BUILD.bazel  highways.rs  junction.rs  lib.rs  segment.rs  timing.rs  types.rs  validate.rs
engine/metro/: BUILD.bazel  color.rs  lib.rs  metros.rs  railways.rs  schedule.rs  timetable_tool.rs  timing.rs  types.rs
engine/metro/tests/: BUILD.bazel  timing_consistency_test.rs
engine/network/: BUILD.bazel  change_state.rs  junction.rs  lib.rs  network.rs  segment.rs  timing.rs
engine/quadtree/: BUILD.bazel  address.rs  direction.rs  lib.rs  neighbors.rs  quadrant.rs  quadtree.rs  rect.rs
engine/route/: BUILD.bazel  base_graph.rs  common.rs  edge.rs  fast_graph_wrapper.rs  isochrone.rs  lib.rs  local_traffic.rs  mode.rs  node.rs  query.rs  route.rs  route_key.rs  route_tool.rs  traffic.rs
engine/route/tests/: BUILD.bazel  base_graph_timer.rs  isochrone_benchmark.rs  sf_routes.rs  sf_routes_android_benchmark.rs  sf_routes_benchmark.rs  sf_routes_test.rs
engine/state/: BUILD.bazel  config.rs  lib.rs  state.rs
engine/tests/: BUILD.bazel  consistency_test.rs  dynamics_test.rs  fields_idempotent_test.rs  fields_timer.rs  network_mutation_test.rs  simulation_timer.rs
engine/tiles/: BUILD.bazel  housing.rs  lib.rs  tile.rs  workplace.rs
ffi/generic/: BUILD.bazel  ffi_wrapper.rs
ffi/java/: BUILD.bazel  engine.rs  load_test.java
ffi/java/src/com/calsignlabs/metro_simulator/: Engine.java
ffi/python/: BUILD.bazel  bindings.rs  importable_test.py
generate/: BUILD.bazel  agents.py  common.py  data.py  gdal.py  highways.py  housing.py  layer.py  lodes.py  main.py  metros.py  network.py  osm.py  quadtree.py  rules.bzl  simple_density.py  terrain.py  transitions.bzl  workplaces.py
generate/datasets/: .gitignore  BUILD.bazel  README.md  census_lodes.bzl  datasets.bzl  esa_globcover.bzl  meta_population_density.bzl  open_street_map.bzl  open_street_map_preprocess.py  osm_preprocess.rs
generate/datasets/patches/: norcal__sonoma_marin.osm
maps/: BUILD.bazel  dc.toml  maps.bzl  nyc.toml  sf.toml  tokyo.toml
maps/cleaners/: sf.py
mobile/android/: AndroidManifest.xml  BUILD.bazel  main.rs
mobile/android/res/layout/: activity_main.xml
mobile/android/res/values/: strings.xml
mobile/android/src/com/calsignlabs/metro_simulator/: MainActivity.java
mobile/platform/: BUILD.bazel  platform_mappings  transitions.bzl
patches/: bazel_mypy_integration__support_newer_version.patch  egui__multitouch_average_pos.patch  egui_winit_platform__touch.patch  imageproc__weighted_distance_transform.patch  osmpbfreader__pub_tags.patch  rules_rust__alias_deduplicate.patch  rules_rust__android_armeabi-v7a.patch  rules_rust__compile_one_dependency.patch  rules_rust__crate_universe_deduplicate.patch  rules_rust__crate_universe_disable_pipelining.patch  rules_rust__issue_1265.patch  rules_rust__rust_analyzer_support.patch  wgpu_hal.patch
pip/: requirements.txt
python/: BUILD.bazel
python/mypy/: mypy_config.ini
python/pip/: config_gdal.bzl  requirements.txt
util/: BUILD.bazel  benchmark_util.rs  id_cmp.rs  macros.bzl  spline_util.rs  test_util.rs
viewers/: BUILD.bazel  map_wrapper.sh  util.bzl
viewers/app/: BUILD.bazel  app.rs  bootstrap.rs  chart.rs  content.rs  desktop.rs  field_overlay.rs  lib.rs
viewers/debug/: BUILD.bazel  main.py
viewers/editor/: BUILD.bazel  main.rs  map_wrapper.sh
