[package]
name = "compile_with_bazel"
version = "0.0.0"

[lib]
path = "fake_lib.rs"

[dependencies]
# utility
anyhow = "1.0"
thiserror = "1.0"
lazy_static = "1.4"
derive_more = "0.99"
enum_dispatch = "0.3"

# serde
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
toml = "0.5"

# math
petgraph = "0.6"
cgmath = {version = "0.18", features = ["serde"]}
splines = {version = "4.0", features = ["cgmath", "serde"]}

# python FFI
pyo3 = {version = "0.15", features = ["extension-module"]}

# graphics
druid = "0.7.0"

# support for cargo-raze bazel integration
[package.metadata.raze]
workspace_path = "//cargo/pkgs"
package_aliases_dir = "pkgs"
targets = ["x86_64-unknown-linux-gnu"]
genmode = "Remote"

# the following are needed for druid

[package.metadata.raze.crates.unic-ucd-version.'*']
compile_data_attr = "glob([\"**/*.rsv\"])"

[package.metadata.raze.crates.unic-ucd-bidi.'*']
compile_data_attr = "glob([\"**/*.rsv\"])"

[package.metadata.raze.crates.druid.'*']
compile_data_attr = "glob([\"**/*.ftl\"])"
