[package]
name = "compile_with_bazel"
version = "0.0.0"

[lib]
path = "fake_lib.rs"

[dependencies]
# utility
anyhow = "1.0"
thiserror = "1.0"
lazy_static = "1.4"
derive_more = "0.99"
enum_dispatch = "0.3"
chrono = "0.4"
itertools = "0.10"
float-cmp = { git = "https://github.com/mikedilger/float-cmp", rev = "418c5d9d339268f355363ea7cf6c546e69d63b7b" }

# serde
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
toml = "0.5"

# math
petgraph = "0.6"
cgmath = {version = "0.18", features = ["serde"]}
splines = {version = "4.0", features = ["cgmath", "serde"]}

# python FFI
pyo3 = {version = "0.15", features = ["extension-module"]}

# cli
clap = {version = "3", features = ["derive"]}

# graphics
# master as of 2022-01-03
druid = { git = "https://github.com/linebender/druid", rev = "3790463cf4e724719dc0c1867afe59c3f2d22b3b", features = ["im"] }

# plotting
plotters = "0.3.1"
plotters-bitmap = "0.3.1"

# support for cargo-raze bazel integration
[package.metadata.raze]
workspace_path = "//cargo/pkgs"
package_aliases_dir = "pkgs"
targets = ["x86_64-unknown-linux-gnu"]
genmode = "Remote"

# the following are needed for druid

[package.metadata.raze.crates.unic-ucd-version.'*']
compile_data_attr = "glob([\"**/*.rsv\"])"

[package.metadata.raze.crates.unic-ucd-bidi.'*']
compile_data_attr = "glob([\"**/*.rsv\"])"

[package.metadata.raze.crates.druid.'*']
compile_data_attr = "glob([\"**/*.ftl\"])"

# needed for clap

[package.metadata.raze.crates.clap.'*']
compile_data_attr = "[\"README.md\"]"

[package.metadata.raze.crates.clap_derive.'*']
compile_data_attr = "[\"README.md\"]"

# needed for plotters

[package.metadata.raze.crates.gif.'*']
compile_data_attr = "[\"README.md\"]"

[package.metadata.raze.crates.image.'*']
compile_data_attr = "[\"README.md\"]"
