[package]
name = "compile_with_bazel"
version = "0.0.0"
edition = "2021"

[lib]
path = "fake_lib.rs"

[dependencies]
# utility
anyhow = "1.0"
thiserror = "1.0"
lazy_static = "1.4"
derive_more = "0.99"
enum_dispatch = "0.3"
chrono = "0.4"
itertools = "0.10"
float-cmp = { git = "https://github.com/mikedilger/float-cmp", rev = "418c5d9d339268f355363ea7cf6c546e69d63b7b" }
bencher = "0.1.5"

# serde
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
toml = "0.5"

# math
petgraph = "0.6"
cgmath = {version = "0.18", features = ["serde"]}
splines = {version = "4.0", features = ["cgmath", "serde"]}

# python FFI
pyo3 = {version = "0.15", features = ["extension-module"]}

# cli
clap = {version = "3", features = ["derive"]}

# druid graphics
# master as of 2022-01-03
druid = { git = "https://github.com/linebender/druid", rev = "3790463cf4e724719dc0c1867afe59c3f2d22b3b", features = ["im"] }

# wgpu graphics
wgpu = "0.12.0"
winit = "0.26.1"
env_logger = "0.9.0"
log = "0.4.14"
pollster = "0.2.5"

# egui
egui = "0.17.0"
egui_wgpu_backend = "0.17.0"
egui_winit_platform = "0.14.0"

# plotting
plotters = "0.3.1"
plotters-bitmap = "0.3.1"

# java bindings
jni = "0.19.0"

# android
ndk = { version = "0.6.0", features = ["trace"] }
# NOTE: must be chosen to be compatible with winit.
ndk-glue = { version = "0.5.0", features = ["logger"] }
ndk-context = "0.1.0"
