load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

rust_library(
    name = "engine",
    srcs = [
        "behavior.rs",
        "consistency.rs",
        "engine.rs",
        "field_update.rs",
        "fields.rs",
        "lib.rs",
        "time_state.rs",
        "trigger.rs",
    ],
    proc_macro_deps = [
        "@crates//:enum_dispatch",
        "@crates//:derive_more",
        "@crates//:derivative",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//engine/agent",
        "//engine/quadtree",
        "//engine/route",
        "//engine/state",
        "//engine/tiles",
        "@crates//:cgmath",
        "@crates//:chrono",
        "@crates//:crossbeam",
        "@crates//:fastblur",
        "@crates//:itertools",
        "@crates//:once_cell",
        "@crates//:rand",
        "@crates//:rand_chacha",
        "@crates//:rand_distr",
        "@crates//:serde",
        "@crates//:serde_json",
        "@crates//:splines",
        "@crates//:thiserror",
        "@crates//:thread_local",
        "@crates//:threadpool",
        "@crates//:toml",
        "@crates//:uom",
    ],
)

rust_test(
    name = "engine_tests",
    crate = ":engine",
    deps = [":engine"],
)
