load("@rules_python//python:defs.bzl", "py_binary")
load("@pip_pkgs//:requirements.bzl", "requirement")

py_binary(
    name = "generate",
    srcs = [
        "housing.py",
        "layer.py",
        "main.py",
        "quadtree.py",
        "terrain.py",
    ],
    main = "main.py",
    visibility = ["//visibility:public"],
    deps = [
        requirement("gdal"),
        requirement("numpy"),
        requirement("matplotlib"),
        requirement("argh"),
        requirement("toml"),
        "//ffi/python",
        "@rules_python//python/runfiles",
    ],
)
