load("@rules_python//python:defs.bzl", "py_binary")
load("@pip_pkgs//:requirements.bzl", "requirement")

py_binary(
    name = "generate",
    srcs = [
        "data.py",
        "gdal.py",
        "housing.py",
        "layer.py",
        "lodes.py",
        "main.py",
        "metros.py",
        "osm.py",
        "quadtree.py",
        "simple_density.py",
        "terrain.py",
        "workplaces.py",
    ],
    main = "main.py",
    visibility = ["//visibility:public"],
    deps = [
        requirement("gdal"),
        requirement("numpy"),
        requirement("matplotlib"),
        requirement("argh"),
        requirement("toml"),
        requirement("pyshp"),
        requirement("shapely"),
        "//ffi/python",
        "@rules_python//python/runfiles",

        # type stubs
        requirement("types-toml"),
        requirement("data-science-types"),
    ],
)
