load("//generate:rules.bzl", "engine_config", "map")
load("//generate/datasets:esa_globcover.bzl", "esa_globcover")
load("//generate/datasets:meta_population_density.bzl", "meta_population_density")
load("//generate/datasets:census_lodes.bzl", "census_lodes")

filegroup(
    name = "maps",
    srcs = [
        ":dc",
        ":nyc",
        ":sf",
    ],
    visibility = ["//visibility:public"],
)

engine_config(
    name = "config",
    max_depth = 12,
    min_tile_size = 40,
    people_per_sim = 100,
)

map(
    name = "nyc",
    datasets = {
        "terrain": esa_globcover,
        "population": meta_population_density,
        "employment": census_lodes.states([
            "ny",
            "nj",
            "ct",
            "pa",
        ]),
    },
    engine_config = ":config",
    latitude = "40.7128N",
    longitude = "74.0060W",
)

map(
    name = "dc",
    datasets = {
        "terrain": esa_globcover,
        "population": meta_population_density,
        "employment": census_lodes.states([
            "dc",
            "va",
            "md",
            "wv",
        ]),
    },
    engine_config = ":config",
    latitude = "38.9072N",
    longitude = "77.0369W",
)

map(
    name = "sf",
    datasets = {
        "terrain": esa_globcover,
        "population": meta_population_density,
        "employment": census_lodes.states(["ca"]),
    },
    engine_config = ":config",
    latitude = "37.7749N",
    longitude = "122.4194W",
)
