load("//generate:rules.bzl", "engine_config")
load(":maps.bzl", "ALL_MAPS", "create_maps")

filegroup(
    name = "maps",
    srcs = ALL_MAPS.values(),
    visibility = ["//visibility:public"],
)

engine_config(
    name = "config",
    max_depth = 12,
    min_tile_size = 40,
    people_per_sim = 100,
)

create_maps()
