load("@rules_python//python:defs.bzl", "py_runtime_pair")

py_runtime(
    name = "py3_runtime",
    interpreter_path = "/usr/bin/python3.10",
    python_version = "PY3",
)

py_runtime_pair(
    name = "py_runtime_pair",
    py3_runtime = ":py3_runtime",
)

toolchain(
    name = "python_toolchain",
    toolchain = ":py_runtime_pair",
    toolchain_type = "@rules_python//python:toolchain_type",
)
