load("@rules_rust//rust:defs.bzl", "rust_library")
load("@crates//:defs.bzl", "crate")

rust_library(
    name = "test_util",
    testonly = True,
    srcs = ["test_util.rs"],
    visibility = ["//visibility:public"],
)

rust_library(
    name = "benchmark_util",
    srcs = ["benchmark_util.rs"],
    visibility = ["//visibility:public"],
    deps = [crate("bencher")],
)

rust_library(
    name = "spline_util",
    srcs = ["spline_util.rs"],
    visibility = ["//visibility:public"],
    deps = [
        crate("splines"),
        crate("cgmath"),
        "//engine/quadtree",
    ],
)
