load("@rules_rust//rust:defs.bzl", "rust_library")

rust_library(
    name = "test_util",
    testonly = True,
    srcs = ["test_util.rs"],
    visibility = ["//visibility:public"],
)

rust_library(
    name = "benchmark_util",
    srcs = ["benchmark_util.rs"],
    visibility = ["//visibility:public"],
    deps = ["@crates//:bencher"],
)

rust_library(
    name = "spline_util",
    srcs = ["spline_util.rs"],
    visibility = ["//visibility:public"],
    deps = [
        "//engine/quadtree",
        "@crates//:cgmath",
        "@crates//:num",
        "@crates//:splines",
    ],
)
