load("//util:macros.bzl", "ms_rust_library")

ms_rust_library(
    name = "test_util",
    testonly = True,
    srcs = ["test_util.rs"],
    visibility = ["//visibility:public"],
)

ms_rust_library(
    name = "benchmark_util",
    srcs = ["benchmark_util.rs"],
    visibility = ["//visibility:public"],
    deps = ["@crates//:bencher"],
)

ms_rust_library(
    name = "spline_util",
    srcs = ["spline_util.rs"],
    visibility = ["//visibility:public"],
    deps = [
        "//engine/quadtree",
        "@crates//:cgmath",
        "@crates//:num",
        "@crates//:splines",
    ],
)
