load("//util:macros.bzl", "ms_rust_library", "ms_rust_test")

ms_rust_library(
    name = "agent",
    srcs = [
        "agent.rs",
        "agent_data.rs",
        "agent_route_state.rs",
        "common.rs",
        "lib.rs",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//engine/quadtree",
        "//engine/route",
        "//engine/state",
        "@crates//:chrono",
        "@crates//:enum-iterator",
        "@crates//:lazy_static",
        "@crates//:serde",
        "@crates//:thiserror",
        "@crates//:uom",
    ],
)

ms_rust_test(
    name = "agent_tests",
    crate = ":agent",
    deps = [
        ":agent",
        "@crates//:chrono",
    ],
)
