load("@rules_rust//rust:defs.bzl", "rust_library")
load("@crates//:defs.bzl", "crate")

rust_library(
    name = "fields",
    srcs = [
        "lib.rs",
    ],
    visibility = ["//visibility:public"],
    deps = [
        crate("serde"),
        "//engine/quadtree",
        "//engine/tiles",
    ],
)
