load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library", "rust_test")

rust_library(
    name = "highway",
    srcs = [
        "lib.rs",
        "timing.rs",
        "types.rs",
        "validate.rs",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//engine/quadtree",
        "//util:spline_util",
        "@crates//:cgmath",
        "@crates//:itertools",
        "@crates//:serde",
        "@crates//:splines",
    ],
)
