load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library", "rust_test")

rust_library(
    name = "highway",
    srcs = [
        "highways.rs",
        "junction.rs",
        "lib.rs",
        "segment.rs",
        "timing.rs",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//engine/quadtree",
        "//util:spline_util",
        "@crates//:cgmath",
        "@crates//:itertools",
        "@crates//:serde",
        "@crates//:splines",
    ],
)
