load("//util:macros.bzl", "ms_rust_binary", "ms_rust_library", "ms_rust_test")

ms_rust_library(
    name = "highway",
    srcs = [
        "highways.rs",
        "junction.rs",
        "lib.rs",
        "segment.rs",
        "timing.rs",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//engine/quadtree",
        "//util:spline_util",
        "@crates//:cgmath",
        "@crates//:itertools",
        "@crates//:serde",
        "@crates//:splines",
    ],
)
