load("//util:macros.bzl", "ms_rust_binary", "ms_rust_library", "ms_rust_test")

ms_rust_library(
    name = "metro",
    srcs = [
        "color.rs",
        "lib.rs",
        "schedule.rs",
        "timing.rs",
        "types.rs",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//engine/quadtree",
        "//util:spline_util",
        "@crates//:cgmath",
        "@crates//:chrono",
        "@crates//:itertools",
        "@crates//:once_cell",
        "@crates//:serde",
        "@crates//:splines",
        "@crates//:thiserror",
    ],
)

ms_rust_test(
    name = "metro_tests",
    crate = ":metro",
    deps = [
        ":metro",
        "@crates//:float-cmp",
    ],
)

ms_rust_binary(
    name = "timetable_tool",
    srcs = ["timetable_tool.rs"],
    visibility = ["//visibility:public"],
    deps = [
        ":metro",
        "//engine",
        "@crates//:clap",
        "@crates//:plotters",
        "@crates//:plotters-bitmap",
    ],
)
