load("//util:macros.bzl", "ms_rust_binary", "ms_rust_library", "ms_rust_test")

ms_rust_library(
    name = "metro",
    srcs = [
        "color.rs",
        "lib.rs",
        "metros.rs",
        "railways.rs",
        "schedule.rs",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//engine/network",
        "//engine/quadtree",
        "//util:id_cmp",
        "@crates//:itertools",
        "@crates//:lazy_static",
        "@crates//:serde",
        "@crates//:splines",
    ],
)

ms_rust_test(
    name = "metro_tests",
    crate = ":metro",
)

ms_rust_binary(
    name = "timetable_tool",
    srcs = ["timetable_tool.rs"],
    # TODO: fix this
    tags = ["manual"],
    visibility = ["//visibility:public"],
    deps = [
        ":metro",
        "//engine",
        "@crates//:clap",
        "@crates//:plotters",
    ],
)
