load("//util:macros.bzl", "ms_rust_library")

ms_rust_library(
    name = "network",
    srcs = [
        "junction.rs",
        "lib.rs",
        "network.rs",
        "segment.rs",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//engine/quadtree",
        "//util:id_cmp",
        "//util:spline_util",
        "@crates//:cgmath",
        "@crates//:serde",
        "@crates//:splines",
    ],
)
