load("//util:macros.bzl", "ms_rust_library")

ms_rust_library(
    name = "network",
    srcs = [
        "change_state.rs",
        "junction.rs",
        "lib.rs",
        "network.rs",
        "segment.rs",
        "timing.rs",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//engine/quadtree",
        "//util:id_cmp",
        "//util:spline_util",
        "@crates//:cgmath",
        "@crates//:itertools",
        "@crates//:once_cell",
        "@crates//:serde",
        "@crates//:splines",
    ],
)
