load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")
load("@crates//:defs.bzl", "crate")

rust_library(
    name = "quadtree",
    srcs = [
        "address.rs",
        "lib.rs",
        "neighbors.rs",
        "quadrant.rs",
        "quadtree.rs",
        "rect.rs",
    ],
    visibility = ["//visibility:public"],
    deps = [
        crate("anyhow"),
        crate("serde"),
        crate("thiserror"),
    ],
)

rust_test(
    name = "quadtree_tests",
    crate = ":quadtree",
    deps = [
        ":quadtree",
        "//util:test_util",
    ],
)
