load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

rust_library(
    name = "quadtree",
    srcs = [
        "address.rs",
        "direction.rs",
        "lib.rs",
        "neighbors.rs",
        "quadrant.rs",
        "quadtree.rs",
        "rect.rs",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "@crates//:anyhow",
        "@crates//:ordered-float",
        "@crates//:serde",
        "@crates//:thiserror",
    ],
)

rust_test(
    name = "quadtree_tests",
    crate = ":quadtree",
    deps = [
        ":quadtree",
        "//util:test_util",
    ],
)
