load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library", "rust_test")

# NOTE: Use features to specify the underlying search implementation:
# - "petgraph": petgraph's A* implementation
# - "fast_paths": fast_paths's contraction hierarchies implementation
BACKEND = "fast_paths"

rust_library(
    name = "route",
    srcs = [
        "base_graph.rs",
        "common.rs",
        "fast_graph_wrapper.rs",
        "lib.rs",
        "query.rs",
        "route.rs",
        "traffic.rs",
    ],
    crate_features = [BACKEND],
    proc_macro_deps = [
        "@crates//:derive_more",
        "@crates//:derivative",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//engine/fields",
        "//engine/highway",
        "//engine/metro",
        "//engine/quadtree",
        "//engine/state",
        "//util:spline_util",
        "@crates//:cgmath",
        "@crates//:fast_paths",
        "@crates//:itertools",
        "@crates//:once_cell",
        "@crates//:petgraph",
        "@crates//:serde",
        "@crates//:splines",
        "@crates//:thiserror",
        "@crates//:uom",
    ],
)

rust_binary(
    name = "route_tool",
    srcs = ["route_tool.rs"],
    visibility = ["//visibility:public"],
    deps = [
        ":route",
        "//engine",
        "@crates//:clap",
        "@crates//:petgraph",
    ],
)

rust_test(
    name = "route_tests",
    crate = ":route",
    crate_features = [BACKEND],
    proc_macro_deps = ["@crates//:derive_more"],
)
