load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library", "rust_test")

rust_library(
    name = "route",
    srcs = [
        "base_graph.rs",
        "common.rs",
        "edge.rs",
        "fast_graph_wrapper.rs",
        "lib.rs",
        "node.rs",
        "query.rs",
        "route.rs",
        "route_key.rs",
        "traffic.rs",
    ],
    proc_macro_deps = [
        "@crates//:derive_more",
        "@crates//:derivative",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//engine/highway",
        "//engine/metro",
        "//engine/quadtree",
        "//engine/state",
        "//util:spline_util",
        "@crates//:cgmath",
        "@crates//:fast_paths",
        "@crates//:itertools",
        "@crates//:once_cell",
        "@crates//:serde",
        "@crates//:splines",
        "@crates//:thiserror",
        "@crates//:uom",
    ],
)

rust_binary(
    name = "route_tool",
    srcs = ["route_tool.rs"],
    visibility = ["//visibility:public"],
    deps = [
        ":route",
        "//engine",
        "@crates//:clap",
    ],
)

rust_test(
    name = "route_tests",
    crate = ":route",
    proc_macro_deps = ["@crates//:derive_more"],
)
