load("//util:macros.bzl", "ms_rust_binary", "ms_rust_library", "ms_rust_test")

ms_rust_library(
    name = "route",
    srcs = [
        "base_graph.rs",
        "common.rs",
        "edge.rs",
        "fast_graph_wrapper.rs",
        "isochrone.rs",
        "lib.rs",
        "local_traffic.rs",
        "node.rs",
        "query.rs",
        "route.rs",
        "route_key.rs",
        "traffic.rs",
    ],
    proc_macro_deps = [
        "@crates//:derivative",
        "@crates//:derive_more",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//engine/highway",
        "//engine/metro",
        "//engine/network",
        "//engine/quadtree",
        "//engine/state",
        "//util:spline_util",
        "@crates//:cgmath",
        "@crates//:crossbeam",
        "@crates//:fast_paths",
        "@crates//:image",
        "@crates//:imageproc",
        "@crates//:itertools",
        "@crates//:line_drawing",
        "@crates//:once_cell",
        "@crates//:serde",
        "@crates//:serde_with",
        "@crates//:spade",
        "@crates//:splines",
        "@crates//:thiserror",
        "@crates//:threadpool",
        "@crates//:uom",
    ],
)

ms_rust_binary(
    name = "route_tool",
    srcs = ["route_tool.rs"],
    visibility = ["//visibility:public"],
    deps = [
        ":route",
        "//engine",
        "@crates//:clap",
    ],
)

ms_rust_test(
    name = "route_tests",
    crate = ":route",
    proc_macro_deps = ["@crates//:derive_more"],
)
