load("@rules_rust//rust:defs.bzl", "rust_library")

rust_library(
    name = "state",
    srcs = [
        "config.rs",
        "lib.rs",
        "state.rs",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//engine/highway",
        "//engine/metro",
        "//engine/quadtree",
        "//engine/tiles",
        "@crates//:itertools",
        "@crates//:rand",
        "@crates//:serde",
        "@crates//:serde_json",
        "@crates//:thiserror",
        "@crates//:toml",
    ],
)
