load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_test")

rust_binary(
    name = "simulation_timer",
    srcs = ["simulation_timer.rs"],
    data = ["//maps:sf"],
    deps = [
        "//engine",
        "@crates//:clap",
        "@crates//:uom",
    ],
)

rust_test(
    name = "dynamics_test",
    srcs = ["dynamics_test.rs"],
    data = ["//maps:sf"],
    deps = [
        "//engine",
        "@crates//:uom",
    ],
)

rust_binary(
    name = "fields_timer",
    srcs = ["fields_timer.rs"],
    data = ["//maps:sf"],
    deps = [
        "//engine",
    ],
)

rust_test(
    name = "fields_idempotent_test",
    srcs = ["fields_idempotent_test.rs"],
    data = ["//maps:sf"],
    deps = [
        "//engine",
        "//engine/quadtree",
        "//engine/state",
        "@crates//:anyhow",
    ],
)
