load("//util:macros.bzl", "ms_rust_benchmark", "ms_rust_test")

ms_rust_benchmark(
    name = "simulation_timer",
    srcs = ["simulation_timer.rs"],
    data = ["//maps:sf"],
    deps = [
        "//engine",
        "@crates//:clap",
        "@crates//:indicatif",
        "@crates//:uom",
    ],
)

ms_rust_test(
    name = "dynamics_test",
    timeout = "long",
    srcs = ["dynamics_test.rs"],
    data = ["//maps:sf"],
    deps = [
        "//engine",
        "@crates//:uom",
    ],
)

ms_rust_benchmark(
    name = "fields_timer",
    srcs = ["fields_timer.rs"],
    data = ["//maps:sf"],
    deps = [
        "//engine",
    ],
)

ms_rust_test(
    name = "fields_idempotent_test",
    srcs = ["fields_idempotent_test.rs"],
    data = ["//maps:sf"],
    deps = [
        "//engine",
        "//engine/quadtree",
        "//engine/state",
        "@crates//:anyhow",
    ],
)

ms_rust_test(
    name = "consistency_test",
    timeout = "long",
    srcs = ["consistency_test.rs"],
    data = ["//maps:sf"],
    deps = [
        "//engine",
        "@crates//:uom",
    ],
)
