load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")
load("@crates//:defs.bzl", "crate")

rust_library(
    name = "tiles",
    srcs = [
        "lib.rs",
    ],
    proc_macro_deps = [
        crate("enum_dispatch"),
    ],
    visibility = ["//visibility:public"],
    deps = [
        crate("serde"),
    ],
)

rust_test(
    name = "tiles_tests",
    crate = ":tiles",
    deps = [":tiles"],
)
