load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

rust_library(
    name = "tiles",
    srcs = [
        "lib.rs",
    ],
    proc_macro_deps = [
        "@crates//:enum_dispatch",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "@crates//:serde",
    ],
)

rust_test(
    name = "tiles_tests",
    crate = ":tiles",
    deps = [":tiles"],
)
