load("//util:macros.bzl", "ms_rust_library", "ms_rust_test")

ms_rust_library(
    name = "tiles",
    srcs = [
        "lib.rs",
    ],
    proc_macro_deps = ["@crates//:enum_dispatch"],
    visibility = ["//visibility:public"],
    deps = ["@crates//:serde"],
)

ms_rust_test(
    name = "tiles_tests",
    crate = ":tiles",
    deps = [":tiles"],
)
